# Hospital_Room_Dectection

./: .gitignore  CLAUDE.md  FINAL_STATUS.md  FLOW_ADAPTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  README_GPU_Support.md  README_RL_Optimization.md  RL_布局优化_README.md  TESTING_REPORT.md  analyze_null.py  check_null.py  compare_models.py  documentation_files.txt  example_rl_optimization.py  inference_ppo_model.py  layout_opt.prof  main.py  pyproject.toml  repomix-output.md  repomix-output.xml  repomix.config.json  result.json  rl_main.py  run_experiments.py  test_adjacency_reward.py  test_gpu_compatibility.py  test_implementation.py  test_model.py  test_null_fix.py  test_original_layout.py  test_potential_logging.py  test_syntax.py  test_time_cost.py  training_logs.csv
.claude/agents/: code-cleanup-standardization-expert.md  code-engineer.md  code-review-expert.md  code-reviewer.md  code-tester.md  comprehensive-test-engineer.md  product-manager-architect.md  project-manager.md  python-expert-coder.md
.claude/commands/: spec-workflow.md
configs/: agent.yaml  baseline.yaml  constraints.yaml  graph_config.yaml  paths.yaml  pathways.yaml  plotter.yaml
data/: process_smart.json  process_traditional.json
docs/: CheckReport.md  Chinese_Code_Review.md  CleanupReport_20250913.md  Code_Review_Summary.md  rl_optimization_summary.md
docs/Adjacency/: Architecture.md  Design.md  Implementation.md  Review.md  Task.md  Test.md
docs/PPO_Adjacency_Performance_Optimization/: Architecture.md  Design.md  Implementation.md  Review.md  Task.md  Test.md
examples/: gpu_optimization_demo.py  rl_optimization_demo.py
experiments/: __init__.py  adaptation.py  adaptation_experiment.py  sample_efficiency.py
models/: model.txt
project_document/: 强化学习布局优化任务.md
project_document/architecture/: rl_optimization_arch_v1.0.md
result/: optimized_layout.json  result.csv  result.json  reuslt.json  super_network_travel_times.csv
results/inference/: layout_ppo_inference_ppo_layout_20250810-173909.txt  layout_ppo_inference_ppo_layout_20250815-204203.txt  layout_ppo_inference_ppo_layout_20250822-194523.txt  layout_ppo_inference_ppo_layout_20250822-215147.txt  ppo_inference_ppo_layout_20250810-173909.json  ppo_inference_ppo_layout_20250815-204203.json  ppo_inference_ppo_layout_20250822-194523.json  ppo_inference_ppo_layout_20250822-215147.json
results/network/: hospital_network.gml  hospital_travel_times.csv  slots.csv
results/tensorboard/: parse_data.py
scripts/: benchmark_adjacency_performance.py
src/: __init__.py  config.py  config_loader.py  dataset.py  loss.py  model.py  network_generator.py  optimize_manager.py  predict.py  train.py  utils.py
src/algorithms/: __init__.py  base_optimizer.py  constraint_manager.py  genetic_algorithm.py  ppo_optimizer.py  simulated_annealing.py
src/analysis/: __init__.py  process_flow.py  rl_layout_optimizer.py  rl_layout_optimizer_gpu.py  slots_exporter.py  travel_time.py  word_detect.py
src/baseline/: __init__.py  base.py  genetic.py  runner.py  simulated_annealing.py
src/baselines/: __init__.py  traditional.py
src/comparison/: __init__.py  results_comparator.py
src/config/: __init__.py  config.py  config_loader.py  graph_config.py  path_manager.py
src/core/: __init__.py  algorithm_manager.py  network_generator.py
src/deepl/: dataset.py  loss.py  model.py  train.py
src/graph/: graph_manager.py  node.py
src/image_processing/: processor.py
src/network/: floor_manager.py  graph_manager.py  network.py  node.py  node_creators.py  preprocess.py  super_network.py
src/node/: node.py
src/optimization/: optimizer.py  rl_optimizer.py
src/pipeline/: __init__.py  _cost_engine.py  cost_manager.py  (+2 more)
(+55 files in other folders)
